--- a/session-13/error.html
+++ b/session-13/error.html
@@ -5,6 +5,7 @@
     <title>error page</title>
 </head>
 <body style="background-color: red;">
-    <h1>ERROR</h1>
+    <h1>ERROR 404</h1>
+    <p>resource not founded</p>
 </body>
 </html>
