index for communication to the computer to the right and to the left

--- a/session-13/index.html
+++ b/session-13/index.html
@@ -15,5 +15,8 @@
   <br><br>
 
 <a href="http://212.128.253.74:8000">[NEXT]</a>
+<a href="http://212.128.253.68:8000">[PREV]</a>
 </body>
 </html>
+
+
