--- a/session-15-form/exercise1-response.html
+++ b/session-15-form/exercise1-response.html
@@ -8,7 +8,7 @@
         <h1>Echo of your message:</h1>
         <p>text</p>
         <p>links:</p>
-        <a href="introduce_text">[Main page]</a>
+        <a href="/">[Main page]</a>
 
 </body>
 </html>
