main page with a text box and some options to calculate the length, number of bases and percentage of a string if it is correct

--- a/P6 Folder/mainpage.html
+++ b/P6 Folder/mainpage.html
@@ -7,7 +7,7 @@
   <body>
     <h3>MAIN PAGE</h3>
 
-    <form action="myserver" method="get">
+    <form action="Seq" method="get">
       Text input  <input type="text" name="msg">
       <br><br>
       Len:
